--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "vite": "^7.3.1",
+    "@vitejs/plugin-react": "^5.1.2",
     "react-dom": "^19.2.3",
     "@google/genai": "^1.35.0",
-    "react": "^19.2.3",
-    "vite": "^7.3.1",
-    "@vitejs/plugin-react": "^5.1.2"
+    "react": "^19.2.3"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
